# rust-mailcannon

./: .dockerignore  .env.template  Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.yml  justfile
.github/: audit.yml
.github/workflows/: general.yml
src/: domain.rs  lib.rs  main.rs  telemetry.rs
src/routes/: healthcheck.rs  mod.rs  subscriptions.rs
src/setup/: db.rs  mod.rs  server.rs  settings.rs
tests/: health_check.rs  test_health_check.rs  test_subscription.rs
tests/common/: mod.rs  setup.rs
