[package]
name = "mailcannon"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
config = "^0.15"
reqwest = "0.12.24"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mailcannon"
