[package]
name = "mailcannon"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
config = "^0.15"
reqwest = "0.12.24"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "^1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
url = "2.5.7"
snafu = { version = "0.8.9", features = ["alloc"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mailcannon"
