[package]
name = "mailcannon"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
config = "^0.15"
reqwest = "0.12.24"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "^1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
url = "2.5.7"
snafu = { version = "0.8.9", features = ["alloc"] }
log = "0.4.29"
env_logger = "0.11.8"
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry"] }
tracing-log = "0.2.0"
once_cell = "1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mailcannon"
